# lele-py-bioinformatics

./: .gitignore  README.md  pyproject.toml  setup.sh  ssh_cacca_generate.sh  ssh_cacca_train.sh  ssh_combined_generate.sh  ssh_combined_train.sh  ssh_psmile_generate.sh  ssh_psmile_train.sh
.zed/: tasks.json
COMBINED_checkpoints/2026_02_07_202304_051020/: loss_data.csv  model_config_used.jsonc  pretrained_model_best.pt  pretrained_model_iter_1000.pt  pretrained_model_iter_10000.pt  pretrained_model_iter_11000.pt  pretrained_model_iter_12000.pt  pretrained_model_iter_13000.pt  pretrained_model_iter_14000.pt  pretrained_model_iter_15000.pt  pretrained_model_iter_16000.pt  pretrained_model_iter_17000.pt  pretrained_model_iter_18000.pt  pretrained_model_iter_19000.pt  pretrained_model_iter_2000.pt  pretrained_model_iter_20000.pt  pretrained_model_iter_21000.pt  pretrained_model_iter_22000.pt  pretrained_model_iter_23000.pt  pretrained_model_iter_24000.pt  pretrained_model_iter_25000.pt  pretrained_model_iter_26000.pt  pretrained_model_iter_27000.pt  pretrained_model_iter_3000.pt  pretrained_model_iter_4000.pt  pretrained_model_iter_5000.pt  pretrained_model_iter_6000.pt  pretrained_model_iter_7000.pt  pretrained_model_iter_8000.pt  pretrained_model_iter_9000.pt
COMBINED_checkpoints_test/2026_02_07_201909_213617/: loss_data.csv  model_config_used.jsonc  pretrained_model_best.pt  pretrained_model_iter_10.pt  pretrained_model_iter_100.pt  pretrained_model_iter_110.pt  pretrained_model_iter_20.pt  pretrained_model_iter_30.pt  pretrained_model_iter_40.pt  pretrained_model_iter_50.pt  pretrained_model_iter_60.pt  pretrained_model_iter_70.pt  pretrained_model_iter_80.pt  pretrained_model_iter_90.pt
DATASETS/ZINC_base/: smiles_preprocessed_scale-zscore_scaling_metrics.txt
DATASETS/ZINC_with_drugs/: smiles_preprocessed_scale-zscore_scaling_metrics.json
PSMILES_checkpoints/2026_02_07_121136_450914/: loss_data.csv  model_config_used.jsonc  pretrained_model_best.pt  pretrained_model_iter_1000.pt  pretrained_model_iter_10000.pt  pretrained_model_iter_11000.pt  pretrained_model_iter_12000.pt  pretrained_model_iter_13000.pt  pretrained_model_iter_14000.pt  pretrained_model_iter_15000.pt  pretrained_model_iter_16000.pt  pretrained_model_iter_17000.pt  pretrained_model_iter_18000.pt  pretrained_model_iter_19000.pt  pretrained_model_iter_2000.pt  pretrained_model_iter_3000.pt  pretrained_model_iter_4000.pt  pretrained_model_iter_5000.pt  pretrained_model_iter_6000.pt  pretrained_model_iter_7000.pt  pretrained_model_iter_8000.pt  pretrained_model_iter_9000.pt
PSMILES_checkpoints_test/2026_02_06_172952_413513/: model_config_used.jsonc
PSMILES_checkpoints_test/2026_02_06_175652_574370/: model_config_used.jsonc
PSMILES_checkpoints_test/2026_02_06_180007_736353/: model_config_used.jsonc
PSMILES_checkpoints_test/2026_02_06_184438_075548/: loss_data.csv  model_config_used.jsonc  pretrained_model_best.pt  pretrained_model_iter_10.pt  pretrained_model_iter_100.pt  pretrained_model_iter_110.pt  pretrained_model_iter_120.pt  pretrained_model_iter_130.pt  pretrained_model_iter_140.pt  pretrained_model_iter_150.pt  pretrained_model_iter_160.pt  pretrained_model_iter_170.pt  pretrained_model_iter_180.pt  pretrained_model_iter_190.pt  pretrained_model_iter_20.pt  pretrained_model_iter_200.pt  pretrained_model_iter_30.pt  pretrained_model_iter_40.pt  pretrained_model_iter_50.pt  pretrained_model_iter_60.pt  pretrained_model_iter_70.pt  pretrained_model_iter_80.pt  pretrained_model_iter_90.pt
SMILES_checkpoints/2026_02_07_110058_333737/: loss_data.csv  model_config_used.jsonc  pretrained_model_best.pt  pretrained_model_iter_1000.pt  pretrained_model_iter_10000.pt  pretrained_model_iter_11000.pt  pretrained_model_iter_12000.pt  pretrained_model_iter_13000.pt  pretrained_model_iter_14000.pt  pretrained_model_iter_15000.pt  pretrained_model_iter_16000.pt  pretrained_model_iter_17000.pt  pretrained_model_iter_18000.pt  pretrained_model_iter_19000.pt  pretrained_model_iter_2000.pt  pretrained_model_iter_20000.pt  (+11 more)
bio/: __global__.py  __init__.py  cacca_generate.py  cacca_train.py  combined_generate.py  combined_train.py  psmile_generate.py  psmile_train.py  test_lele_import.py
bioinformatics/: __global__.py  __init__.py
(+57 files in other folders)
