[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio"
version = "0.0.1"
authors = [
  { name="Lele", email="maggiori.samuele@gmail.com" },
]
description = "My personal workspace"
readme = "README.md"
requires-python = "==3.11.*"
# requires-python = ">=3.8"
# COULD NOT USE ">=3.8" as deepchem.feat.smiles_tokenizer.SmilesTokenizer has a bug.
# By fixing python to 3.11.* I made it work. The reason is unknown, since python's packages are held together by toughts and prayers.    
# TODO: REMOVE deepchem dependency
# COULD NOT ADD ANY license BEACUSE IT CAN CAUSE BREAKS ;;
# license = {text="MIT AND (Apache-2.0 OR BSD-2-Clause)"}
# license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

# To use your correct CUDA version:
# >>> uv pip install --upgrade torch --torch-backend=auto
# To use a specific version of torch run the following command:
# NOTE! Substitute cu117 with YOUR desired CUDA version.
# >>> uv pip install --upgrade torch --torch-backend=cu126
dependencies = [
    "new-import-system @ git+https://github.com/Uomocosa/new-python-import-system",
    "lele @ git+https://github.com/Uomocosa/lele-py",
    "mingpt @ git+https://github.com/karpathy/minGPT",
    "pytest",
    "loguru",
    "tyro",
    "torch",
    "torchvision",
    "transformers[torch]==4.46.*",
    "pydantic==2.12.*",
    "numpy==1.26.*",
    "deepchem==2.8.*",
    "rdkit==2025.9.*",
    "matplotlib==3.10.*",
]

[tool.setuptools]
packages = { find = { where = ["."], include = [
    "bio*",
] } }

[project.scripts]
cacca_train = "bio.cacca_train:main"
cacca_generate = "bio.cacca_generate:main"
psmile_train = "bio.psmile_train:main"
psmile_generate = "bio.psmile_generate:main"


[tool.pytest.ini_options]
python_files = "*.py"
testpaths = ["bio"]
norecursedirs = [
  "__pycache__",
  ".pytest_cache",
  ".git",
  ".zed",
  ".vscode",
  "__HELPER_DIR__",
]
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:invalid escape sequence:DeprecationWarning",
    "ignore:.*GraphNetwork:DeprecationWarning",
    "ignore:.*SelfAttention Layer:DeprecationWarning",
]
markers = [
    "verbose: tests that have some kind of output",
    "todo: test yet to implement",
    "above10s: test that require more than 10 seconds",
    "unreliable: test that depends on external factors, in the future it will fail",
    "infinite: test will not finish",
]
addopts = "-m 'not verbose and not todo and not above10s and not unreliable and not infinite'"
